<resources>
    <string name="app_name">SIG 2022</string>
    <string name="title_home">Home</string>
    <string name="title_suggestion">Suggestion</string>
    <string name="title_services">Services</string>

    <string name="label_garbage_types">Types de déchets :</string>
    <string name="label_jour_nettoyage">Jour de nettoyage :</string>
    <string name="label_opening_hours">Heures d\'ouverture :</string>
    <string name="label_addresse">Addrese :</string>
    <string name="modele_colonne">Modèle de colonne :</string>

    <string name="inconnue">Inconnue</string>
    <string name="inconnu">Inconnu</string>
    <string name="inconnues">Inconnues</string>
    <string name="inconnus">Inconnus</string>

    <string name="label_description">Description :</string>
    <string name="fab_degradation">Signaler une dégradation</string>
    <string name="label_signaler">Veuillez indiquer la nature de la dégradation :</string>
    <string name="button">Signaler</string>
    <string name="hint_degradation">nature</string>
    <string name="erreur_nature_vide">Veuillez indiquer la nature de la dégradation</string>
    <string name="label_types">Types de mobilier :</string>
    <string name="type_de_mobiler">Type de mobiler</string>
    <string name="position_actuelle">Position actuelle</string>
    <string name="select_carte">Sélectionner sur la carte</string>
    <string name="valider">Valider</string>
    <string name="button_liste_degrad">Voir la liste des dégradations</string>
    <string name="button_liste_sugg">Voir la liste des suggestions</string>
    <string name="titre_degradations">Sélectionnez une dégradation pour la réparer :</string>
    <string name="titre_suggestions">Sélectionnez une suggestion pour afficher son emplacement sur une carte :</string>
</resources>