<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.sig2022_app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_suggestion"
        android:name="com.example.sig2022_app.ui.suggestion.SuggestionFragment"
        android:label="@string/title_suggestion"
        tools:layout="@layout/fragment_suggestion" />

    <fragment
        android:id="@+id/navigation_services"
        android:name="com.example.sig2022_app.ui.services.ServicesFragment"
        android:label="@string/title_services"
        tools:layout="@layout/fragment_services" />
</navigation>