<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.suggestion.SuggestionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_types" />

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/type_de_mobiler"
            android:minHeight="48dp"
            android:spinnerMode="dialog" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton_pos_actuelle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/position_actuelle" />

            <RadioButton
                android:id="@+id/radioButton_pos_manuelle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_carte" />
        </RadioGroup>

        <Button
            android:id="@+id/button_valider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valider" />

        <WebView
            android:id="@+id/map_pick_webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>