<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/myCoordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_degradation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_signaler" />

        <EditText
            android:id="@+id/editText_degradation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:hint="@string/hint_degradation"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView_degradation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/valider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#F44336"
            android:text="@string/button"
            android:textColor="#000000"
            android:layout_gravity="center"/>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>